# chitty-sdk

./: LICENSE  README.md  pyproject.toml
chitty_sdk/: __init__.py  auth.py  config.py  connection.py  http.py  tool.py
chitty_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
