[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chitty-sdk"
version = "0.1.0"
description = "SDK for building Chitty Workspace marketplace packages"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "DataVisions", email = "hello@datavisions.io"},
]
keywords = ["chitty", "marketplace", "ai", "tools", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "keyring>=24.0",
]

[project.optional-dependencies]
http = ["requests>=2.28"]
dev = [
    "requests>=2.28",
    "pytest>=7.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://chitty.ai"
Documentation = "https://chitty.ai/docs/sdk"
Repository = "https://github.com/datavisions/chitty-sdk"

[tool.setuptools.packages.find]
include = ["chitty_sdk*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
